==> akionu/kaguya-code/lib/pico-bno08x/src/pico-bno08x.cpp <==
#include "pico-bno08x.h"

bool BNO080::begin(uint8_t deviceAddress, i2c_inst_t* i2cBus, uint8_t intPin)
{
	_deviceAddress = deviceAddress; //If provided, store the I2C address from user
	_i2cBus = i2cBus;
	//_i2cPort = &wirePort;			//Grab which port the user wants us to use
	_int = intPin;					//Get the pin that the user wants to use for interrupts. By default, it's NULL and we'll not use it in dataAvailable() function.

	//We expect caller to begin their I2C port, with the speed of their choice external to the library
	//But if they forget, we start the hardware here.
	//_i2cPort->begin();

	//Begin by resetting the IMU
	softReset();

	//Check communication with device
	shtpData[0] = SHTP_REPORT_PRODUCT_ID_REQUEST; //Request the product ID and reset info
	shtpData[1] = 0;							  //Reserved

	//Transmit packet on channel 2, 2 bytes
	sendPacket(CHANNEL_CONTROL, 2);
	//receivePacket();

	//Now we wait for response
	if (receivePacket() == true)
	{
		if (shtpData[0] == SHTP_REPORT_PRODUCT_ID_RESPONSE)
		{
			if (_printDebug == true)
			{
				printf("SW Version Major: %d\n", shtpData[2]);
				printf("SW Version Minor: %d\n", shtpData[3]);
				uint32_t SW_Part_Number = (uint32_t)(shtpData[7] << 24) | (uint32_t)(shtpData[6] << 16) | (uint32_t)(shtpData[5] << 8) | (uint32_t)(shtpData[4]);
				printf("SW Part Number: %d\n", SW_Part_Number);
				uint32_t SW_Build_Number = (uint32_t)(shtpData[11] << 24) | (uint32_t)(shtpData[10] << 16) | (uint32_t)(shtpData[9] << 8) | (uint32_t)(shtpData[8]);
				printf("SW Build Number: %d\n", SW_Build_Number);
				uint16_t SW_Version_Patch = (uint16_t)(shtpData[13] << 8) | (uint16_t)(shtpData[12]);
				printf("SW Version Patch: %d\n", SW_Version_Patch);
			}
			return (true);
		}
	}

	return (false); //Something went wrong
}

bool BNO080::beginSPI(uint8_t user_CSPin, uint8_t user_WAKPin, uint8_t user_INTPin, uint8_t user_RSTPin, uint32_t spiPortSpeed, SPIClass &spiPort)
{
	_i2cPort = NULL; //This null tells the send/receive functions to use SPI

	//Get user settings
	_spiPort = &spiPort;
	_spiPortSpeed = spiPortSpeed;
	if (_spiPortSpeed > 3000000)
		_spiPortSpeed = 3000000; //BNO080 max is 3MHz

	_cs = user_CSPin;
	_wake = user_WAKPin;
	_int = user_INTPin;
	_rst = user_RSTPin;

	gpio_set_dir(_cs, OUTPUT);
	gpio_set_dir(_wake, OUTPUT);
	gpio_set_dir(_int, INPUT_PULLUP);
	gpio_set_dir(_rst, OUTPUT);

	gpio_put(_cs, 1); //Deselect BNO080

	//Configure the BNO080 for SPI communication
	gpio_put(_wake, 1); //Before boot up the PS0/WAK pin must be high to enter SPI mode
	gpio_put(_rst, LOW);   //Reset BNO080
	sleep_ms(2);				   //Min length not specified in datasheet?
	gpio_put(_rst, 1);  //Bring out of reset

	//Wait for first assertion of INT before using WAK pin. Can take ~104ms
	waitForSPI();

	//if(wakeBNO080() == false) //Bring IC out of sleep after reset
	//  printf("BNO080 did not wake up\n");

	_spiPort->begin(); //Turn on SPI hardware

	//At system startup, the hub must send its full advertisement message (see 5.2 and 5.3) to the
	//host. It must not send any other data until this step is complete.
	//When BNO080 first boots it broadcasts big startup packet
	//Read it and dump it
	waitForSPI(); //Wait for assertion of INT before reading advert message.
	receivePacket();

	//The BNO080 will then transmit an unsolicited Initialize Response (see 6.4.5.2)
	//Read it and dump it
	waitForSPI(); //Wait for assertion of INT before reading Init response
	receivePacket();

	//Check communication with device
	shtpData[0] = SHTP_REPORT_PRODUCT_ID_REQUEST; //Request the product ID and reset info
	shtpData[1] = 0;							  //Reserved

	//Transmit packet on channel 2, 2 bytes
	sendPacket(CHANNEL_CONTROL, 2);

	//Now we wait for response
	waitForSPI();
	if (receivePacket() == true)
	{
		if (shtpData[0] == SHTP_REPORT_PRODUCT_ID_RESPONSE)
			if (_printDebug == true)
			{
				printf("SW Version Major: 0x");
				printf(shtpData[2]);
				printf(" SW Version Minor: 0x");
				printf(shtpData[3]);
				uint32_t SW_Part_Number = (uint32_t)shtpData[7] << 24) | (uint32_t)shtpData[6] << 16) | (uint32_t)shtpData[5] << 8) | (uint32_t)shtpData[4]);
				printf(" SW Part Number: 0x");
				printf(SW_Part_Number);
				uint32_t SW_Build_Number = (uint32_t)shtpData[11] << 24) | (uint32_t)shtpData[10] << 16) | (uint32_t)shtpData[9] << 8) | (uint32_t)shtpData[8]);
				printf(" SW Build Number: 0x");
				printf(SW_Build_Number);
				uint16_t SW_Version_Patch = (uint16_t)shtpData[13] << 8) | (uint16_t)shtpData[12]);
				printf(" SW Version Patch: 0x");
				printfln(SW_Version_Patch);
			}
			return (true);
	}

	return (false); //Something went wrong
}

bool BNO080::waitForSPI()
{
	for (uint8_t counter = 0; counter < 125; counter++) //Don't got more than 255
	{
		if (gpio_get(_int) == LOW)
			return (true);
		if (_printDebug == true)
			printf("SPI Wait"\n);
		sleep_ms(1);
	}

	if (_printDebug == true)
		printf("SPI INT timeout\n");
	return (false);
}

bool BNO080::receivePacket(void)
{
#if 0
	if (_i2cPort == NULL) //Do SPI
	{
		if (gpio_get(_int) == 1)
			return (false); //Data is not available

		//Old way: if (waitForSPI() == false) return (false); //Something went wrong

		//Get first four bytes to find out how much data we need to read

		_spiPort->beginTransaction(SPISettings(_spiPortSpeed, MSBFIRST, SPI_MODE3);
		gpio_put(_cs, LOW);

		//Get the first four bytes, aka the packet header
		uint8_t packetLSB = _spiPort->transfer(0);
		uint8_t packetMSB = _spiPort->transfer(0);
		uint8_t channelNumber = _spiPort->transfer(0);
		uint8_t sequenceNumber = _spiPort->transfer(0); //Not sure if we need to store this or not

		//Store the header info
		shtpHeader[0] = packetLSB;
		shtpHeader[1] = packetMSB;
		shtpHeader[2] = channelNumber;
		shtpHeader[3] = sequenceNumber;

		//Calculate the number of data bytes in this packet
		uint16_t dataLength = (uint16_t)packetMSB << 8 | packetLSB);
		dataLength &= ~(1 << 15); //Clear the MSbit.
		//This bit indicates if this package is a continuation of the last. Ignore it for now.
		//TODO catch this as an error and exit
		if (dataLength == 0)
		{
			//Packet is empty
			printHeader();
			return (false); //All done
		}
		dataLength -= 4; //Remove the header bytes from the data count

		//Read incoming data into the shtpData array
		for (uint16_t dataSpot = 0; dataSpot < dataLength; dataSpot++)
		{
			uint8_t incoming = _spiPort->transfer(0xFF);
			if (dataSpot < MAX_PACKET_SIZE)	//BNO080 can respond with upto 270 bytes, avoid overflow
				shtpData[dataSpot] = incoming; //Store data into the shtpData array
		}

		gpio_put(_cs, 1); //Release BNO080

		_spiPort->endTransaction();
		printPacket();
	}
	else //Do I2C
#endif
	{
		int16_t ret = i2c_read_blocking(_i2cBus, (uint8_t)_deviceAddress, shtpHeader, 4, false);

		//Get the first four bytes, aka the packet header
		uint8_t packetLSB = shtpHeader[0];
		uint8_t packetMSB = shtpHeader[1];
		uint8_t channelNumber = shtpHeader[2];
		uint8_t sequenceNumber = shtpHeader[3]; //Not sure if we need to store this or not

		//Calculate the number of data bytes in this packet
		int16_t dataLength = ((uint16_t)packetMSB << 8 | packetLSB);
		dataLength &= ~(1 << 15); //Clear the MSbit.
		//This bit indicates if this package is a continuation of the last. Ignore it for now.
		//TODO catch this as an error and exit
		if (dataLength == 0 || ret < 0)
		{
			//Packet is empty
			return (false); //All done
		}

#if 0
		dataLength -= 4; //Remove the header bytes from the data count
		getData(dataLength);
#endif
		
#if 1
		//waitForReadI2C();
		ret = i2c_read_blocking(_i2cBus, (uint8_t)_deviceAddress, shtpBuffer, dataLength, false);
		if (ret < 0) {
			//printf("receivePacket: ret: %d\n", ret);
			return (false);
		}
		if (_printDebug == true)
			printf("receive: ");
		printPacket();

#endif
	}

	return (true); //We're done!
}

bool BNO080::getData(uint16_t bytesRemaining)
{
	uint16_t dataSpot = 0; //Start at the beginning of shtpData array
	static uint8_t buf[I2C_BUFFER_LENGTH];

	//Setup a series of chunked 32 byte reads
	while (bytesRemaining > 0)
	{
		uint16_t numberOfBytesToRead = bytesRemaining;
		if (numberOfBytesToRead > (I2C_BUFFER_LENGTH - 4))
			numberOfBytesToRead = (I2C_BUFFER_LENGTH - 4);

		if (waitForReadI2C() == false) 
			return (false); //Error

		i2c_read_blocking(_i2cBus, _deviceAddress, buf, (uint8_t)(numberOfBytesToRead + 4), false);

		for (uint8_t x = 0; x < numberOfBytesToRead; x++)
		{
			if (dataSpot < MAX_PACKET_SIZE)
			{
				shtpData[dataSpot++] = buf[x+4]; //Store data into the shtpData array
			}
			else
			{
				//Do nothing with the data
			}
		}

		bytesRemaining -= numberOfBytesToRead;
	}
	return (true); //Done!
}

bool BNO080::sendPacket(uint8_t channelNumber, uint8_t dataLength)
{
	uint8_t packetLength = dataLength + 4; //Add four bytes for the header
	//packetLength &= ~(1 << 15);

#if 0
	if (_i2cPort == NULL) //Do SPI
	{
		//Wait for BNO080 to indicate it is available for communication
		if (waitForSPI() == false)
			return (false); //Something went wrong

		//BNO080 has max CLK of 3MHz, MSB first,
		//The BNO080 uses CPOL = 1 and CPHA = 1. This is mode3
		_spiPort->beginTransaction(SPISettings(_spiPortSpeed, MSBFIRST, SPI_MODE3);
		gpio_put(_cs, LOW);

		//Send the 4 byte packet header
		_spiPort->transfer(packetLength & 0xFF);			 //Packet length LSB
		_spiPort->transfer(packetLength >> 8);				 //Packet length MSB
		_spiPort->transfer(channelNumber);					 //Channel number
		_spiPort->transfer(sequenceNumber[channelNumber]++); //Send the sequence number, increments with each packet sent, different counter for each channel

		//Send the user's data packet
		for (uint8_t i = 0; i < dataLength; i++)
		{
			_spiPort->transfer(shtpData[i]);
		}

		gpio_put(_cs, 1);
		_spiPort->endTransaction();
	}
	else //Do I2C
#endif
	{
		//if(packetLength > I2C_BUFFER_LENGTH) return(false); //You are trying to send too much. Break into smaller packets.

		// 4 byte packet header
		shtpHeader[0] = packetLength & 0xFF;			  //Packet length LSB
		shtpHeader[1] = packetLength >> 8;				  //Packet length MSB
		shtpHeader[2] = channelNumber;					  //Channel number
		shtpHeader[3] = sequenceNumber[channelNumber]++; //Send the sequence number, increments with each packet sent, different counter for each channel

		//waitForWriteI2C();
		int16_t ret = i2c_write_nors_blocking(_i2cBus, _deviceAddress, shtpBuffer, packetLength);
		
		if (_printDebug == true)
			printf("send: ");
		printPacket();
		if (ret < 0) 
			return (false);
	}

	return (true);
}
